--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'com.bigtree.beku'
-version = '0.0.1-SNAPSHOT'
+group = 'com.bigtree.order'
+version = '1.0'
 
 java {
 	sourceCompatibility = '17'
