--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,8 +15,8 @@ spring:
   mail:
     default-encoding: UTF-8
     host: smtp.gmail.com
-    username: desiland.help@gmail.com
-    password: ifoyfbxgnihjaqix
+    username: noreply.houseofchef@gmail.com
+    password: rfgmkyrbdgwsnvgi
     port: 587
     debug: true
     properties:
@@ -41,8 +41,8 @@ application:
 
 smtp:
   server: ${SMTP_SERVER:smtp.gmail.com}
-  username: desiland.help@gmail.com
-  password: ifoyfbxgnihjaqix
+  username: noreply.houseofchef@gmail.com
+  password: rfgmkyrbdgwsnvgi
   debug: true
 
 stripe:
