--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,12 +17,14 @@ spring:
   mail:
     default-encoding: UTF-8
     host: smtp.gmail.com
-    username: noreply.houseofchef@gmail.com
-    password: rfgmkyrbdgwsnvgi
+    username: contact.dishome@gmail.com
+    password: dsuphdeopyvgdscr
     port: 587
     debug: true
     properties:
       mail:
+        store:
+          protocol: smtp
         smtp:
           auth: true
           starttls:
@@ -43,8 +45,8 @@ application:
 
 smtp:
   server: ${SMTP_SERVER:smtp.gmail.com}
-  username: noreply.houseofchef@gmail.com
-  password: rfgmkyrbdgwsnvgi
+  username: contact.dishome@gmail.com
+  password: dsuphdeopyvgdscr
   debug: true
 
 stripe:
