--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,8 +17,8 @@ spring:
   mail:
     default-encoding: UTF-8
     host: smtp.gmail.com
-    username: contact.eatem@gmail.com
-    password: jcojdfaisraiuorc
+    username: orders.zcoop@gmail.com
+    password: tpklvdcfbinywlsi 
     port: 587
     debug: true
     properties:
@@ -45,8 +45,8 @@ application:
 
 smtp:
   server: ${SMTP_SERVER:smtp.gmail.com}
-  username: contact.eatem@gmail.com
-  password: jcojdfaisraiuorc
+  username: orders.zcoop@gmail.com
+  password: tpklvdcfbinywlsi
   debug: true
 
 stripe:
